--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -455,12 +455,14 @@
                     >
                         <!-- 🔤 Search Input -->
                         <div class="relative">
-                            <input
-                            v-model="searchQuery"
-                            type="text"
-                            placeholder="ابحث..."
-                            class="w-full p-2 text-lg bg-gray-700 rounded focus:outline-none focus:ring-2 focus:ring-teal-400"
-                            />
+                            <span
+                            contenteditable="true"
+                            @input="searchQuery = $event.target.textContent"
+                            @blur="searchQuery = $event.target.textContent"
+                            :data-placeholder="searchQuery ? '' : 'ابحث...'"
+                            class="w-full p-2 text-lg bg-gray-700 rounded focus:outline-none focus:ring-2 focus:ring-teal-400 block min-h-[2.5rem]"
+                            style="white-space: pre-wrap; word-wrap: break-word;"
+                            >{{ searchQuery }}</span>
                             <button
                             @click="clearSearch"
                             class="absolute top-2 left-3 text-xl text-red-600 font-black transition-all duration-100 active:scale-90"
