--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -411,6 +411,13 @@
     .animate-ticker {
         animation: ticker 15s linear infinite;
     }
+
+    /* Contenteditable placeholder styling */
+    .search-input-editable:empty::before {
+        content: attr(data-placeholder);
+        color: #9ca3af;
+        pointer-events: none;
+    }
 </style>
 <meta name='probely-verification' content='d1a5235e-0470-4602-aae0-84688966eb19' />
 </head>
@@ -460,8 +467,9 @@
                             @input="searchQuery = $event.target.textContent"
                             @blur="searchQuery = $event.target.textContent"
                             :data-placeholder="searchQuery ? '' : 'ابحث...'"
-                            class="w-full p-2 text-lg bg-gray-700 rounded focus:outline-none focus:ring-2 focus:ring-teal-400 block min-h-[2.5rem]"
+                            class="w-full p-2 text-lg bg-gray-700 rounded focus:outline-none focus:ring-2 focus:ring-teal-400 block min-h-[2.5rem] search-input-editable"
                             style="white-space: pre-wrap; word-wrap: break-word;"
+                            dir="auto"
                             >{{ searchQuery }}</span>
                             <button
                             @click="clearSearch"
