--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -534,6 +534,7 @@
                                         <span class="px-2 font-bold">الملخص</span>
                                     </label>
                                 </div>
+                                <div class="text-lg text-red-600 text-center mt-2">{{ totalEpisodes }}</div>
                             </div>
                         </fieldset>
                     </div>
