--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -432,6 +432,11 @@
                 </div>
             </div>
 
+            <!-- 🔢 Episodes Notch -->
+            <div class="absolute top-0 left-1/2 -translate-x-1/2 bg-gray-800 border-2 border-red-600 rounded-b-full px-4 py-1 text-red-600 font-bold text-lg text-center shadow-lg z-50">
+                ({{ totalEpisodes }})
+            </div>
+
             <!-- 🔍 Search Button + Popup -->
             <div class="fixed top-4 left-4 z-50">
                 <!-- 🔍 Icon -->
@@ -535,7 +540,6 @@
                                     </label>
                                 </div>
                             </div>
-                            <div class="text-lg text-red-600 text-center mt-2">({{ totalEpisodes }})</div>
                         </fieldset>
                     </div>
                 </transition>
