--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -498,7 +498,7 @@
                     class="relative"
                     >
                         <div
-                        class="absolute top-2 left-0 bg-gray-800 border-2 border-green-600 rounded-xl shadow-2xl p-4 w-80 sm:w-96 text-gray-100"
+                        :class="['absolute top-2 left-0 bg-gray-800 border-2 rounded-xl shadow-2xl p-4 w-80 sm:w-96 text-gray-100', searchQuery ? 'border-orange-500' : 'border-green-600']"
                         @click.stop
                         >
                             <div class="search-notch">
@@ -5587,6 +5587,10 @@
                                 (التصفية قيد التشغيل حالياً)
                             </span>
                             <br v-if="isAnyFilterActive" />
+                            <span v-if="searchQuery" @click="toggleSearch" class="inline-block text-base text-black cursor-pointer transition-all duration-100 active:scale-90">
+                                (البحث قيد التشغيل حالياً)
+                            </span>
+                            <br v-if="searchQuery" />
                             <span :class="['text-base', isAnyFilterActive ? 'text-white' : 'text-red-600']">
                                 انقر على أي عنوان لعرض تفاصيله
                             </span>
